# corrosion-paper

./: .gitignore  0.Tratamiento_dataset_acuatico.ipynb  1.Entrenamiento_Corrosion_Aereo.ipynb  2.Entrenamiento_corrosion_acuatico_KFold.ipynb  3.Entrenamiento_Corrosion_Mixto.ipynb  4.Comparacion_Modelos.ipynb  5.Ensemble_Logico.ipynb  7.Prueba_Modelos_SAM_Mejorado.ipynb  8.Prueba_Modelos_SAM3_Real.ipynb  README.md  pyproject.toml  translate.py
