[project]
name = "articulo-corrosion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ensemble-boxes==1.0.9",
    "ipykernel>=7.1.0",
    "ipython==8.6.0",
    "matplotlib==3.6.1",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pandas==1.5.1",
    "pillow==12.0.0",
    "roboflow>=1.2.11",
    "scikit-learn==1.7.2",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "ultralytics==8.3.223",
]
